# watch-together-yandex-disk

./: .gitignore  LICENSE  README.md  config.py.example  globals.py  main.py  pyproject.toml
movies/: classes.py  db.py  tmdb.py  yandex_disk.py
rooms/: db.py  room.py  state.py  utils.py
users/: classes.py  db.py  utils.py
web/: __init__.py  misc.py  routes.py  web.py
web/custom_widgets/: PlyrVideoPlayer.py  __init__.py  content_card.py  content_dialog.py  header.py
web/pages/: __init__.py  all_rooms.py  contents.py  index.py  room.py
