[project]
name = "watch-with-friends"
version = "0.1.0"
description = "Self-hosted web-app that let's you watch movides together using Yandex.Disk"
requires-python = ">=3.12"
dependencies = [
    "nicegui==3.0.2",
    "aiohttp==3.12.15",
    "aiofiles==24.1.0",
    "yndx-disk==0.3.2",
    "cachetools==6.2.0",
    "cachetools-async==0.0.5",
    "orjson==3.11.3",
    "bcrypt==5.0.0",
    "pyjwt==2.10.1",
]
